fix height alignment

--- a/src/components/platformFilter/style.module.scss
+++ b/src/components/platformFilter/style.module.scss
@@ -45,17 +45,12 @@
 
 .CollapsibleTrigger {
   cursor: pointer;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 15px;
-  line-height: 1;
   background-color: var(--item-bg);
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding: 0.75rem 1rem;
   border-radius: 0.25rem;
   user-select: none;
 
@@ -67,7 +62,6 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    padding: 0.5rem;
   }
 }
 
@@ -154,8 +148,6 @@
 }
 
 .ChevronButton {
-  width: 24px;
-  height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
